# KurentoCustomModule

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
CMake/: CodeGenerator.cmake  FindKurentoHelpers.cmake
debian/: changelog  control
src/gst-plugins/: CMakeLists.txt  gstgsthello.cpp  gstgsthello.h  gsthello.c
src/server/implementation/objects/: gsthelloImpl.cpp  gsthelloImpl.hpp
src/server/interface/: gsthello.gsthello.kmd.json  gsthello.kmd.json
